Footer alignment fixed

--- a/style.css
+++ b/style.css
@@ -716,31 +716,6 @@
                 display: block;
             }
 
-            /* .menu-toggle {
-                display: block;
-            }
-            
-            .nav-links {
-                position: fixed;
-                top: 80px;
-                left: -100%;
-                width: 100%;
-                height: calc(100vh - 80px);
-                background: white;
-                flex-direction: column;
-                align-items: center;
-                padding: 40px 0;
-                transition: all 0.3s ease;
-            }
-            
-            .nav-links.active {
-                left: 0;
-            }
-            
-            .nav-links li {
-                margin: 15px 0;
-            } */
-
             #hero{
                 margin-top: 10vh;
             }
@@ -756,6 +731,10 @@
             
             section {
                 padding: 60px 0;
+            }
+
+            .footer-content{
+                justify-items: left;
             }
         }
 
